--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
+  
 </head>
 <body>
+
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <ul>
@@ -14,6 +14,11 @@
             </ul>
         {% endif %}
     {% endwith %}
+    {% if session['username'] %}
+        <p>Bienvenido, {{ session['username'] }} | <a href="{{ url_for('logout') }}">Cerrar sesión</a></p>
+    {% else %}
+        <p><a href="{{ url_for('login') }}">Iniciar sesión</a> | <a href="{{ url_for('register') }}">Registrarse</a></p>
+    {% endif %}
     {% block content %}{% endblock %}
 </body>
 </html>
